miniextendr-macros/tests/ui/module_use_path.stderr
error: syntax not supported
 --> tests/ui/module_use_path.rs:7:9
  |
7 |     use foo::bar;
  |         ^^^
